--- a/.github/workflows/weread.yml
+++ b/.github/workflows/weread.yml
@@ -2,8 +2,8 @@ name: weread note sync
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 */2 * * *'  # 每 2 小时执行一次
+  # schedule:
+  #   - cron: '0 */2 * * *'  # 每 2 小时执行一次
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
